--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "Budget-App",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +12,8 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
